--- a/style.css
+++ b/style.css
@@ -41,6 +41,22 @@ body{
     border: 0;
     outline:0;
     height: 70px;
-    
+    border-radius: 50px;
+    width: 60px;  
+
 
 }
+
+.search button img{
+    width: 15px;
+}
+  
+.details{
+    padding: 30px ;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 50px;
+}
+
+
+
